# geopatterns-demo

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  run.py
.github/workflows/: deploy.yml  test.yml
docs/: commands.md  index.md
docs/javascripts/: geopatterns-demo.js
docs/presentation/: 00-intro.md  01-fashion.md  create-lambda.md  index.md  mainframe.md
docs/references/: apigw2.md  conservation-of-complexity.md  index.md  layers.md  serverless-revolution-has-stalled.md  serverless-tf.md
geopatterns_demo/: api.py  cli.py  draw.py  file_handler.py  lambda_handler.py  methods_list.py  models.py  random_phrase.py  settings.py
geopatterns_demo/dictionary/: adjectives.txt  nouns.txt
infrastructure/: api.tf  aws.tf  build.tf  iam.tf  init.tf  lambda.tf  layer.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  tfstate.tf
javascripts/: geopatterns-demo.js
layer/: Dockerfile
presentation/: index.html
presentation/00-intro/: index.html
presentation/01-fashion/: index.html
presentation/create-lambda/: index.html
references/: index.html
references/conservation-of-complexity/: index.html
references/serverless-revolution-has-stalled/: index.html
references/serverless-tf/: index.html
search/: search_index.json
site/: index.html
site/css/: geopatterns-demo.css
site/js/: geopatterns-demo.js
