[tool.poetry]
name = "geopatterns-demo"
version = "0.0.3"
description = "Demo for the geopatterns Python library."
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
geopatterns = {git = "https://github.com/bryanveloso/geopatterns.git"}
CairoSVG = "^2.5.2"
typer = "^0.3.2"
fastapi = "^0.65.2"
mangum = "^0.11.0"
sentry-sdk = "^1.0.0"
py-loremipsum = "^1.1.0"
boto3 = "^1.19.9"


[tool.poetry.dev-dependencies]
octadocs = "^0.0.35"
wemake-python-styleguide = "^0.15.2"
uvicorn = "^0.13.4"
flakehell = "^0.9.0"
pip = "^21.0.1"
mkdocs-semantic = "^1.0.0"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocs-macros-plugin = "^0.5.5"
mkautodoc = "^0.1.0"
mypy = "^0.812"
flake8 = "<3.9.1"

[tool.poetry.scripts]
geopatterns = "geopatterns_demo.cli:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.flakehell]
base = "https://raw.githubusercontent.com/Recall-Masters/standards/main/pyproject.toml"


[tool.flakehell.exceptions."geopatterns_demo/models.py"]
wemake-python-styleguide = [
    # Found subclassing a builtin: str
    # We need that for Pydantic and FastAPI support.
    "-WPS600"
]


[tool.flakehell.exceptions."geopatterns_demo/api.py"]
wemake-python-styleguide = [
    # Found complex default value
    # Query() call necessary for FastAPI GET query string definitions.
    "-WPS404",
]
flake8-bugbear = [
    # Do not perform function calls in argument defaults.
    # The same as above about Query().
    "-B008",
]


[tool.flakehell.exceptions."geopatterns_demo/*.py"]
flake8-darglint = [
    # We do not use any kind of special formatting in docstrings right now.
    "-DAR101",
    "-DAR201"
]
